Added comment to download notebook

--- a/FINAL_RM_3AM_IS 590 DV- Spring 2018 Final Part 3- X Millennials.ipynb
+++ b/FINAL_RM_3AM_IS 590 DV- Spring 2018 Final Part 3- X Millennials.ipynb
@@ -19,7 +19,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Our data storytelling principles\n",
+    "### Please download the notebook and required data file to view the interactive visualizations
+    ### Our data storytelling principles\n",
     "A.\tTeam collaboration: learning from and leveraging each other\n",
     "B.\tContinuously probing the outcome with the 3 class questions:\n",
     "    1.\tWhat is the visualization trying to show?\n",
