Modified Markdown comment

--- a/FINAL_RM_3AM_IS 590 DV- Spring 2018 Final Part 3- X Millennials.ipynb
+++ b/FINAL_RM_3AM_IS 590 DV- Spring 2018 Final Part 3- X Millennials.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### If you are viewing this notebook on Github: \n",
+    "##### If you are viewing this notebook on Github/ nbviewer: \n",
     "1. Download this notebook and the zip file. \n",
     "2. Extract the csv from the zip file\n",
     "3. Follow Instruction 2 from this document, Section 1: Instructions to Access File"
